--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -51,5 +51,11 @@
     - France: no consuls or embassies, no ratification of the treaty that had existed before; France does trade with Morocco but does not send presents or pay tribute
     - Portugal: Portugal and Morocco are in dispute with each other over some business transactions; Portugal does not pay tribute, but does give presents and allows Morocco's cruisers to refit at Lisbon
     - Spain: does not enforce the 1799 treaty with Morocco; Morocco actually owes Spanish agents $100,000; nevertheless, Spain still gives occasional presents
-    - Germany: no official relationship, but Morocco allows German ships to trade unmolested
-    - 
+    - Germany: no official relationship, but Morocco allows German ships to trade unmolested, though they have requested an ambassador to make their peace official
+    - Genoa: has not renewed its peace treaty with Morocco
+    - Italy: no peace treaty
+    - Ragusa: has no direct contact with Morocco, but does not fear capture because of annual service to the Ottoman Empire
+    - Algiers: at peace; little contact by sea
+    - Tunis: no contact by sea
+    - Tripoli: no contact by sea; fairly decent trade over land; Morocco may favor Tripoli because of the rest area Tripoli provides for pilgrims from Morocco to Mecca
+    - (All of these from BW2:340-41; 24 December 1802)
