Joshua Brussels, quarter master

--- a/Death from unknown cause.page
+++ b/Death from unknown cause.page
@@ -2,3 +2,4 @@
 - 8 September 1802: Mathias Guise, ordinary seaman on board the [USS *Constellation*]() (BW2:270)
 - 5 December 1802: Frances Sweeny, marine on board the [USS *Constellation*]() (BW2:329)
 - 18 December 1802: John Brown, marine on board the [USS *Constellation*]() (BW2:335)
+- 3 January 1803: Joshua Brussels, quarter master on board the [USS *Constellation*]() (BW2:343)
