I seldom do wrong intentionally

--- a/Alexander Murray.page
+++ b/Alexander Murray.page
@@ -1,3 +1,5 @@
 - Called "that old woman" Murray
 - Not a good captain, from all accounts; fractious and imperious to other officers and diplomats
 - Seems to have been deaf, according to [Daniel Carmick](): "Capt. Murray (being hard of Hearing) had no idea of the Dissentions there were on board his Ship" (BW2:295)
+- Murray consoles himself about his inability to get to Gibraltar for supplies: "we are narrow sighted Mortals, we know not when we do right, or wrong, I at least have this consolation, that I seldom do wrong intentionally" (11 January 1803, BW2:343)
+- Murray loses the feeling in his left thumb and finger as a result of an accident with the rigging (BW2:344)
