--- a/Coup in Tripoli.page
+++ b/Coup in Tripoli.page
@@ -16,7 +16,8 @@
     - Cathcart also seems to be claiming that using Hamet to stage a coup was his idea to begin with
     - Cathcart applauds Eaton's work to make the coup happen: "I must do Mt Eaton the justice to say that they [Eaton's actions] seem to have been judicious dictated by imperious necessity & an honest zeal for the success of an enterprize which promised such vast advantages to our Country"
 - BW2:317: [Richard Valentine Morris]() writes to [Hamet Karamanli]()'s agent in response to a request made by Hamet, apparently for money, that he doesn't have authority to give money but that Hamet should write to the US government and will likely get his request (20 November 1802)
-
+- BW2:347: [Hamet Karamanli]() listens to Morris, and writes directly to [Thomas Jefferson]() asking for $40,000 and some guns and stores, "which I promise to re ay them whenever we take Tripoli and shall always remain the faithful friend of the United States of America" (20 January 1803)
+    - Hamet thinks he can raise 100,000 men to take back Tripoli and get his wife and kids back
 
 ## Outcomes
 - BW2:244: SecState already begins preparation for letting Hamet down after the United States has used him: "As far therefore as the views of the Brother may contribute to our success, the aid of them may be used for the purpose. Should this aid be found inapplicable or his own personal object unattainable, It wifl be due to the honor of the United States, and to the expectations he will have naturally formed, to treat his disappointment with much tenderness, and to restore him as nearly as may be, to the situation from which he was drawn; or to make some other convenient arrangement that may be more eligible to him. In case of a treaty of peace with the ruling Bashaw of Tripoli, perhaps it may be possible to make some stipulation, formal or informal, in favor of the Brother, which may be a desirable alleviation of his misfortune" (22 August 1802)
