Algiers wants money for Morris

--- a/Captivity.page
+++ b/Captivity.page
@@ -14,6 +14,7 @@
 - [Alexander Murray]() reports that 2 of the crew escaped in a Greek boat during the skirmish between the [USS *Constellation*]() and the Tripolitan gun boats; 3 had been claimed by the British; so only 4 were left in captivity as of 20 August 1802 (BW2:242)    
 - 22 September 1802: [Nicholas Nissen]() reports that the prisoners have been released and are on a ship on its way to Algiers; Nissen again went to bat for the American prisoners in  a big way; he requests reimbursement for the many things he purchased on their behalf (BW2:281-82) 
 - 11 October 1802: [Richard O'Brien]() reports that Morris and 4 other seamen arrived in Algiers on 6 October, after (O'Brien says) the dey of Algiers requested their release; the dey then sent Morris et al. to O'Brien as a "present" to the United States (BW2:289)
+- 25 January 1803: [James Leander Cathcart]() writes that he has heard that Algiers is requesting a gift of $6500 for the safe return of Capt. Morris and his crew; Cathcart finds this request inadmissable, as, he says, "I confess I csn't perceive an peculiar mark of Friendship in charging the United States 6,500 dollars for what at the most exorbitant valuation was only worth 5000 dollars at Tripoli exclusive of his loading us with an Imaginary weight of obligataon the value of which at some future period may be very considerable-- I declare I cannot reconcile these absurdities" (BW2:349)
 
 ## Samuel Calder
 - BW1:54: Samuel Calder to House of Dominick Terry and Co., 3 November 1793
