he might go to hell his own way

--- a/Richard O’Brien.page
+++ b/Richard O’Brien.page
@@ -1,1 +1,2 @@
-Captain of *Dolphin*
+- Captain of *Dolphin*
+- [James Leander Cathcart]() reports that O'Brien is a generally unlikeable and untrustworthy fellow, who has his own interests and nothing else at heart, and that he intends to make it difficult for anyone else to come after him in his consular duties: "Mr OBrion informed Capt John Shaw of the George Washington that he would be da-'d before he would leave a paper in the Office or give any Consul that would be appointed the least information that he might conduct our affairs as he pleases (and to make use of his own expression) that he might go to hell his own way" (25 January 1803, BW2:350)
