--- a/Relations with Tunis.page
+++ b/Relations with Tunis.page
@@ -27,3 +27,4 @@
 
 ## Affronts to national honor and custom
 - 12 September 1802: Bey tells [William Eaton]() to tell the commander of the [USS *Constellation*]() that he must come to shore to pay his respects; Eaton tells him that he will instruct the commander to do so only once the bey treats the ships of the American squadron with the proper respect due to neutral nations (BW2:272-73)
+- 22 February 1803: [James Leander Cathcart]() records that [William Eaton]() came on board with Cathcart and gave them an idea how relations stood with Tunis: "The whole of which tended To prove the great utility the appearance of the Squadron would be to our affairs with this Regency, and to impress the Commodore with the Idea that a personal interview with the Bashaw, would be expected, and was absolutely necessary; as none of the Commanders in Chief of our Squadron had ever paid him that Compliment." (BW2:351) 
