come to the bey's court

--- a/Conduct of naval ships.page
+++ b/Conduct of naval ships.page
@@ -40,3 +40,6 @@ These guidelines aren't quite "rules," but they're strong recommendations about 
 
 ## Difficulties between officers and their subordinates
 - BW2:299: Lt. [Jacob Jones]() writes to [Alexander Murray]() to mend the relationship after they apparently had words and Murray put Jones under arrest (for insubordination, apparently) (unknown date)
+
+## Etiquette between navy and other nations' courts
+- [James Leander Cathcart]() pleads with commodore [Richard Valentine Morris]() to make an appearance in the bashaw (bey)'s court, as that is proper protocol: "his presence would be of infinite service to our affairs here....The sequel serves to prove how often those Bashaws wear unmeaning frowns, and the necessity of observing a decisive line of conduct in the most trifling transactions. I did not wait upon the Bashaw, in Compliment to the Commodore, Neither did I receive the visits of the Consuls of other Nations, for the same reason" (BW2:351, 24 February 1803)
