--- a/Conduct of naval ships.page
+++ b/Conduct of naval ships.page
@@ -43,3 +43,5 @@ These guidelines aren't quite "rules," but they're strong recommendations about 
 
 ## Etiquette between navy and other nations' courts
 - [James Leander Cathcart]() pleads with commodore [Richard Valentine Morris]() to make an appearance in the bashaw (bey)'s court, as that is proper protocol: "his presence would be of infinite service to our affairs here....The sequel serves to prove how often those Bashaws wear unmeaning frowns, and the necessity of observing a decisive line of conduct in the most trifling transactions. I did not wait upon the Bashaw, in Compliment to the Commodore, Neither did I receive the visits of the Consuls of other Nations, for the same reason" (BW2:351, 24 February 1803)
+    - Cathcart and [William Eaton]()'s entreaties are successful: on 26 February, [Richard Valentine Morris]() and [John Rodgers]() plus Cathcart, Eaton, and a few others go to the court of the bey
+    - The bey refused to see them on the day they requested audience; instead, they spent the day visiting members of his court and an agent of [Hamet Karamanli]() (see also [Coup in Tripoli]()) (BW2:352)
