--- a/Relations with Tunis.page
+++ b/Relations with Tunis.page
@@ -25,6 +25,12 @@
     - The bey says he does not acknowledge the law of nations in terms of blockade
     - Eaton says he has to talk to the commodore at the very least before any decisions can be made
 - BW2:353: The papers about the ownership of the *Paulina* and its cargo are laid in front of the bey of Tunis as well as [Richard Valentine Morris](); Morris "promised its restitution" and the agent of the ship-owner promised not to make any further claims; "we flattered ourselves that the appearance of the Squadron in this Bay had tranquilized our affairs with this Regency for some time" (giving meat to the opinions of Cathcart and Eaton about the efficacy of showing force in the Barbary states) (2 March 1803) (see also [Use of force]()) 
+    - Despite the agent's promise not to make any more claims, he returned the next day and the day after to make additional claims that he insisted had been mentioned during the commodore's meeting (including 1/2 of 47 casks of raisins)
+    - "[[James Leander Cathcart]()] lost all patience at so barefwd a falsehood, called him an impostor
+destitute of shame, he went away in a Pet, and the Commodore in order to prevent detention thought proper to accede to his demand, however unjust, and to prevent
+a repetition, determined to embark immediately, he having previously intended
+to take leave of the Bashaw, ss is customary when a Public Officer leaves this
+Country
 
 ## Affronts to national honor and custom
 - 12 September 1802: Bey tells [William Eaton]() to tell the commander of the [USS *Constellation*]() that he must come to shore to pay his respects; Eaton tells him that he will instruct the commander to do so only once the bey treats the ships of the American squadron with the proper respect due to neutral nations (BW2:272-73)
