--- a/Relations with Tunis.page
+++ b/Relations with Tunis.page
@@ -29,5 +29,6 @@
     - "[[James Leander Cathcart]()] lost all patience at so barefaced a falsehood, called him an impostor destitute of shame, he went away in a Pet, and the Commodore in order to prevent detention thought proper to accede to his demand, however unjust, and to prevent a repetition, determined to embark immediately, he having previously intended to take leave of the Bashaw, as is customary when a Public Officer leaves this Country" 
 
 ## Affronts to national honor and custom
+- See also [Conduct of naval ships]()
 - 12 September 1802: Bey tells [William Eaton]() to tell the commander of the [USS *Constellation*]() that he must come to shore to pay his respects; Eaton tells him that he will instruct the commander to do so only once the bey treats the ships of the American squadron with the proper respect due to neutral nations (BW2:272-73)
 - 22 February 1803: [James Leander Cathcart]() records that [William Eaton]() came on board with Cathcart and gave them an idea how relations stood with Tunis: "The whole of which tended To prove the great utility the appearance of the Squadron would be to our affairs with this Regency, and to impress the Commodore with the Idea that a personal interview with the Bashaw, would be expected, and was absolutely necessary; as none of the Commanders in Chief of our Squadron had ever paid him that Compliment." (BW2:351) 
