--- a/House of Bacri.page
+++ b/House of Bacri.page
@@ -6,3 +6,5 @@
 - BW1:411: [Richard O'Brien](), 10 January 1801: Bacri and Busnach have great influence in Algiers, so much that they made peace with France in Algiers against the wishes of the Ottoman Grand Signior, and muddy the diplomatic waters between Britain and Algiers
 
 - BW1:583: The Dey of Algiers considers the house of Bacri and Busnach as his "eyes and ears," and so will not dismiss them from his court
+
+- BW2:360: [Richard O'Brien]() hears that the "Jew directory," most likely Bacri or Busnach, " encouraged this Bey to persist, in his demand for a frigate; assuring him that it is only necessary to be firm in order to secure success; always quoting our examples with the Dey: and that they are engaged in this project from personal enmity towards me" (8 February 1803)
