John Thomas fell overboard

--- a/Accidental deaths.page
+++ b/Accidental deaths.page
@@ -1,1 +1,2 @@
 - BW2:294: [Daniel Carmick]() records an odd circumstance in which two men from the [USS *Enterprise*]() were drowned trying to get back to their ship from shore at Leghorn. [Andrew Sterett]() left them on shore and they had to jump across boats to get into Sterett's boat, but then it seems that their boat overturned or something while going back to the Enterprise and the two men were drowned, 15 October 1802
+- BW2:364: John Thomas, ordinary seaman on board the [USS *Constellation*](), falls overboard and never seen again (22 February 1803)
