--- a/Appropriations.page
+++ b/Appropriations.page
@@ -5,3 +5,9 @@
 - TODO: Appropriations bill approved 1 May 1802
 - BW2:346: SecNav writes to [William Eustis]() to ask for authorization for 4 small ships of war (18 January 1803)
 - BW2:362-63: SecNav writes to [DeWitt Clinton]() that the president wishes Congress to authorize the procurement of 8 gunboats and 4 additional small ships, equalling about $12,000 (16 February 1803)
+
+
+## Appropriations bills
+### 28 February 1803
+- 4 vessels of war (no more than 16 guns): $96,000
+- 15 gunboats: $50,000
