--- a/Science.page
+++ b/Science.page
@@ -10,7 +10,7 @@
 
 ### Disease delays diplomacy
 - BW1:344: [John Adams]() to [Hamouda Pasha](), 15 January 1800: "With respect to the time within which you required that the stipulated stores should be delivered, I have charged Mr Eaton to explain to you the impossibility of a compliance: and will here only observe that of the six months proposed, four had elapsed when your letter and the Consuls dispatches arrived: And then a pestilence raging in some of our principal cities by causing the inhabitants to flee into the country & suspending business, rendered delays unavoidable."
-- BW2:369: [Richard Valentine Morris]() falls ill and is unable to return to the court of the bey of Tunis to continue making his case for the adjudication of the *Paulina* (7 March 1803)
+- BW2:369: [Richard Valentine Morris]() falls ill and is unable to return to the court of the bey of Tunis to continue making his case for the adjudication of the *Paulina*; sends [John Rodgers]() and [George Davis]() instead (7 March 1803)
 
 ## Disease in the navy
 - BW2:34: Surgeons' orders include keeping men on board ship if at all possible, keeping careful records of the progress of their sicknesses, and visiting his patients at least twice a day
