--- a/Science.page
+++ b/Science.page
@@ -24,6 +24,7 @@
 - BW2:102: [USS *Constellation*]() loses three men before even making it to the Mediterranean: 2 from small pox and one from a "violent Cold" (1 April 1802)
 - BW2:268: [Hugh G. Campbell]() of [USS *Adams*]() sends 12 men home immediately on the [USS *Boston*]() upon arrival in the Med because of disease, 7 September 1802
 - BW2:326: Over 100 men on [USS *Constellation*]() sick with "violent Colds" (29 November 1802)
+- BW2:373: [Alexander Murray]() reports that he and some of his crew have been stricken with ship fever on the passage back to the United States (11 March 1803)
 
 ## [Dealing with disease]()
     
