--- a/People.page
+++ b/People.page
@@ -3,6 +3,7 @@
 - [Thomas Barclay]()
 - [James Leander Cathcart]()
 - [Edward Church]()
+- [George Davis]()
 - [William Eaton]()
 - [John Lamb]()
 - [John S. M. Matthieu]()
