General Greene as quarantine ship

--- a/Science.page
+++ b/Science.page
@@ -25,6 +25,7 @@
 - BW2:268: [Hugh G. Campbell]() of [USS *Adams*]() sends 12 men home immediately on the [USS *Boston*]() upon arrival in the Med because of disease, 7 September 1802
 - BW2:326: Over 100 men on [USS *Constellation*]() sick with "violent Colds" (29 November 1802)
 - BW2:373: [Alexander Murray]() reports that he and some of his crew have been stricken with ship fever on the passage back to the United States (11 March 1803)
+    - BW2:374: SecNav orders [Thomas Tingey]() to remove the sick men from the [USS *Constellation*]() to the [USS *General Greene*]() immediately, and the *General Greene* must then be removed from the vicinity of the other ships so that the ship fever doesn't spread (16 March 1803)
 
 ## [Dealing with disease]()
     
