--- a/Need for different ships.page
+++ b/Need for different ships.page
@@ -9,4 +9,6 @@
 - BW2:297: [Richard Valentine Morris]() wants smaller vessels as well, particularly vessels with sweeps; he expresses doubt that they are available in the Mediterranean, however, as he believes that the other Barbary states would not be willing to provide instruments of war against their fellow regencies (15 October 1802)
 - BW2:337: SecNav writes to [William Bainbridge]() to ask his opinion about smaller vessels: "As it is probable that I may be called on for information on this subject, I wish previously to avail myself of the opinion of Gentlemen who have had experience of the Mediterranean Seas, and of the mode of warfare pursued by the Tripolines. I shall, therefore, be obliged to you for your opimon as well with respect to the size as the fashion of rigging & arming vessels for this service" (23 December 1802)
 
-### Building [Gunboats]()
+### Building new ships
+- [Gunboats]()
+- [Schooners]()
