Preble builds brigs

--- a/Schooners.page
+++ b/Schooners.page
@@ -1,1 +1,2 @@
 - SecNav puts [William Bainbridge]() in charge of building a schooner at Baltimore on the exact specifications of the [USS *Enterprise*]() (21 March 1803, BW2:376)
+- SecNav puts [Edward Preble]() in charge of building another brig at Portsmouth (23 March 1803, BW2:377)
