--- a/Relations with Algiers.page
+++ b/Relations with Algiers.page
@@ -5,3 +5,4 @@
 - BW2:321: [Richard O'Brien]() brings $30,000 to Algiers in lieu of the stores they are supposed to bring for payment; the dey wants stores and will not accept the cash. The dey gave O'Brien 3 months to come up with the stores (23 November 1802)
 - BW2:356-57: [Richard O'Brien]() reiterates that the dey has made demands of stores instead of cash; "I think it further prudent our Commerce should be on its Guard against a sudden surprize"
     - O'Brien details how capricious the dey of Algiers can be, as he declared war against France and Denmark one day, but the next day decided their consuls could stay longer, while revoking the agreement he had made with the agent of Bonaparte (2 February 1803)
+    - SecNav realizes that Algiers is in earnest about wanting stores instead of money; thus he writes to [Israel Whelen](), purveyor at Philadelphia, to see what articles the dey wants and whether they can be found at Philadelphia (26 March 1803, BW2:377)
