Chesapeake with influenza

--- a/Science.page
+++ b/Science.page
@@ -24,6 +24,7 @@
 - BW2:102: [USS *Constellation*]() loses three men before even making it to the Mediterranean: 2 from small pox and one from a "violent Cold" (1 April 1802)
 - BW2:268: [Hugh G. Campbell]() of [USS *Adams*]() sends 12 men home immediately on the [USS *Boston*]() upon arrival in the Med because of disease, 7 September 1802
 - BW2:326: Over 100 men on [USS *Constellation*]() sick with "violent Colds" (29 November 1802)
+- BW2:382: [USS *Chesapeake*]() stuck in Malta from 7 December 1802 until 25 December, as a result of "influenza, [which] deterred me from risking the increase of their complaint, by exposing them to the inclemency of the weather" 
 - BW2:373: [Alexander Murray]() reports that he and some of his crew have been stricken with ship fever on the passage back to the United States (11 March 1803)
     - BW2:374: SecNav orders [Thomas Tingey]() to remove the sick men from the [USS *Constellation*]() to the [USS *General Greene*]() immediately, and the *General Greene* must then be removed from the vicinity of the other ships so that the ship fever doesn't spread (16 March 1803)
 
