expensive at Syracuse

--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -49,3 +49,4 @@ One of the constant questions for the squadron was whether to get supplies from 
 - BW2:26: Dale says that [Daniel McNeill]() should be able to get supplies from the British agent (uncertain at what port), 18 January 1802
 - BW2:87: [Stephen Cathalan]() supplies [USS *George Washington*]() at Marseilles in Feburary 1802
 - BW2:238: [USS *Constellation*]() gets supplies at Malta: fresh provisions, Spirits, Vinegar, Flour, Cheese, Bread, Coals, Wood, &c., 17 August 1802
+- BW2:382: [USS *Chesapeake*]() calls at Syracuse thinking it might be cheaper than Malta to buy supplies there--[Richard Valentine Morris]() reports that "On the contrary, every article was much more exorbitant, and in fact, impossible to procure" (around 26 December 1802)
