Algiers and Tunis as threat

--- a/Blockade effectiveness.page
+++ b/Blockade effectiveness.page
@@ -25,5 +25,7 @@
 
 ## Causes for ineffectiveness
 - BW2:277: [Alexander Murray]() writes that he had to leave the blockade because he is out of almost all supplies and is probably going to go all the way to Gibraltar to get stores (18 September 1802)
+- BW2:384: [Richard Valentine Morris]() sees the threat from Algiers and Tunis as so great that he dare not withdraw his forces from those two countries; thus, he has no ships at all left for the blockade of Tripoli
+    - Furthermore, his lack of supplies (supposed to have been brought by the [USS *Constellation*]()) has forced him to pull the entire squadron back to Gibraltar (30 March 1803)
 
 ## [Need for different ships]()
