--- a/Schooners.page
+++ b/Schooners.page
@@ -1,2 +1,3 @@
 - SecNav puts [William Bainbridge]() in charge of building a schooner at Baltimore on the exact specifications of the [USS *Enterprise*]() (21 March 1803, BW2:376)
 - SecNav puts [Edward Preble]() in charge of building another brig at Portsmouth (23 March 1803, BW2:377)
+- SecNav reports to [Richard Valentine Morris]() on 6 April 1803 that 3 schooners and 1 brig are being built and should be ready by August (BW2:387)
