Chesapeake to America

--- a/USS Chesapeake.page
+++ b/USS Chesapeake.page
@@ -1,6 +1,7 @@
 Originally supposed to be captained by [Thomas Truxtun]() (BW2:26)
 
 - BW2:307: Recalled from the Mediterranean along with [USS *Constellation*](), though [Richard Valentine Morris]() is ordered to stay and superintend negotiations, 23 October 1802
+- BW2:388: *Chesapeake* sets sail for America, 6 April 1803; Morris transfers to the [USS *New York*]()
 
 ### Captain [James Barron]()
 - Sailed 27 April 1802
