--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -33,6 +33,13 @@ One of the constant questions for the squadron was whether to get supplies from 
     - 450 bushels of pease
     - 20,000 lb of rice
 - BW2:304: *Cora* dispatched with supplies, 21 October 1802
+- BW2:392: SecNav orders [Samuel Brown]() to charter a supply ship for the squadron, 15 April 1803, carrying to Gibraltar:
+    - 300 barrels of beef
+    - 250 barrels of pork
+    - 120,000 lb of bread
+    - 60 barrels of flour
+    - 17,500 lb of rice
+    - 400 bushels of pease
 
 ## In the Mediterranean
 - BW1:553: [Richard Dale]() discovers that Malta has only water, no stores, so he recommends Syracuse as a place to get supplies
