--- a/Schooners.page
+++ b/Schooners.page
@@ -2,3 +2,4 @@
 - SecNav puts [Edward Preble]() in charge of building another brig at Portsmouth (23 March 1803, BW2:377)
 - SecNav reports to [Richard Valentine Morris]() on 6 April 1803 that 3 schooners and 1 brig are being built and should be ready by August (BW2:387)
     - Originally meant to be built at Norfolk, Baltimore, Portsmouth, and Philadelphia, but SecNav scraps the Norfolk one and investigates the possibility of building at Boston instead (BW2:390, 13 April 1803)
+    - 18 April 1803: SecNav also scraps Portsmouth vessel, instructed [Edward Preble]() rather to assist at Boston (BW2:393)
