--- a/Schooners.page
+++ b/Schooners.page
@@ -4,3 +4,4 @@
     - Originally meant to be built at Norfolk, Baltimore, Portsmouth, and Philadelphia, but SecNav scraps the Norfolk one and investigates the possibility of building at Boston instead (BW2:390, 13 April 1803)
     - 18 April 1803: SecNav also scraps Portsmouth vessel, instructed [Edward Preble]() rather to assist at Boston (BW2:393)
     - 25 April 1803: SecNav scraps plans to build at New York instead of Portsmouth (BW2:393)
+- 28 April 1803: SecNav inquires about the possibility of buying the [*Nautilus*]() (BW2:394)
