--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -41,6 +41,7 @@ One of the constant questions for the squadron was whether to get supplies from 
     - 17,500 lb of rice
     - 400 bushels of pease
     - *Federal Eagle* chartered for this task (28 April 1803)
+        - *Federal Eagle* has fifteen days starting 3 May 1803 to get to sea, and fifteen days to unload once she reaches Gibraltar (BW2:395)
 
 ## In the Mediterranean
 - BW1:553: [Richard Dale]() discovers that Malta has only water, no stores, so he recommends Syracuse as a place to get supplies
