--- a/Communications.page
+++ b/Communications.page
@@ -1,4 +1,5 @@
 ## Communications with Washington
+- 4 May 1803: SecNav writes to [Richard Valentine Morris](): I have not heard from You since the 30th Novr 1802, but I will not permit myself to suppose that You have not written since that period,yet it is a subject of serious concern that we have not heard from You. I presume it would be superfluous to remind You of the absolute necessity of your writing frequently and keeping us informed of all your movements" (BW2:396)
 
 ## Communications with diplomats
 - 27 July 1802: [Nicholas Nissen]() observes that it is "very seldom that I have any opportunity to correspond with the Commanders of the Situation of the affairs here," perhaps partly because the commanders don't see a need to, but also because the commanders aren't near Tripoli to be communicated with (BW2:213)
