--- a/Schooners.page
+++ b/Schooners.page
@@ -5,3 +5,4 @@
     - 18 April 1803: SecNav also scraps Portsmouth vessel, instructed [Edward Preble]() rather to assist at Boston (BW2:393)
     - 25 April 1803: SecNav scraps plans to build at New York instead of Portsmouth (BW2:393)
 - 28 April 1803: SecNav inquires about the possibility of buying the [*Nautilus*]() (BW2:394)
+- 5 May 1803: SecNav buys the [*Nautilus*]() (BW2:397)
