--- a/Engagements with Tripoli.page
+++ b/Engagements with Tripoli.page
@@ -12,6 +12,8 @@
     - In a different report, Murray says there were 8 gunboats plus the admiral's galley; plus 6000 men gathered on shore, which the two frigates routed with cannon fire (BW2:218)
 - Report that [USS *Boston*]() had skirmished with the Tunisians in June 1802 turned out to be false (BW2:257)
  
+### 9 May 1803
+- Batteries in the French citadel of Tripoli, as well as gunboats, fired at [USS *John Adams*](); *John Adams* tacked out of range (BW2:400-401)
 
 ## Reports of cruisers
 - 17 May 1802: [Alexander Murray]() notes that there were no Tripolitan cruisers out as of 31 April (BW2:155)
