Explosion on New York

--- a/Physical accidents to ships or persons.page
+++ b/Physical accidents to ships or persons.page
@@ -17,6 +17,9 @@ Accidents to ships or people were no small matter when the squadron was deployed
     - Constellation puts in at Malaga to get repairs. [Alexander Murray]() thinks Malaga is a good place for repairs, as well as being a relatively inexpensive place; nevertheless, he estimates that they will be in port for a month (BW2:319)
 - [USS *Chesapeake*]() has a sprung bowsprit, and thus is stranded in Malta (BW2:326, 20 November 1802)
     - [Richard Valentine Morris]() notes the help he received from the HMS *Stately*, Capt. Scott, who furnished a fish to repair the sprung bowsprit (BW2:382)
+- BW2:403: [USS *New York*]() has an explosion of powder in its store room, 25 April 1803
+    - The gunners' stores were destroyed; hospital stores, pursers' stores, and marine clothing were damaged
+    - 8 men very badly burned, "a number of whom are so shockingly burnt that their lives are despair'd of"---4 of them eventually died
 
 ### To persons
 - A strange little episode: 2 midshipmen from the [USS *Essex*]() went on shore, where it seems that they dueled with each other, and Mr. Higginbotham killed Mr. Swartwout. Uncertain whether this occurred in Gibraltar or Algeciras. Higginbotham was arrested, and permission to bury Swartwout in Gibraltar was denied. (BW2:96, 27 March 1802) Swartwout was ultimately buried in Algeciras, Fort St. Iago, 28 March 1802 (BW2:97). (See also [Death by violence]().)
