John Adams captures

--- a/Engagements with Tripoli.page
+++ b/Engagements with Tripoli.page
@@ -3,6 +3,9 @@
 - *Tripoli* nearly destroyed, 20 men killed and 30 wounded (of 80-man crew)
 - *Enterprise* largely unharmed, no casualties
 
+## [USS *John Adams*]() v. [*Meshouda*]() (12 May 1803)
+- *John Adams* captured the vessel and captured 40 Barbary sailors and 10 passengers (BW2:402)
+
 ## Skirmishes
 ### 16 May 1802
 - [USS *Boston*]() drove a vessel on shore near Tripoli; in conjunction with the Swedish fleet, fired on gun boats sent out to assist the stranded vessel; the Swedes were also cannonading the fort of Tripoli but the *Boston* was not involved in that (BW2:154)
