--- a/Schooners.page
+++ b/Schooners.page
@@ -6,3 +6,4 @@
     - 25 April 1803: SecNav scraps plans to build at New York instead of Portsmouth (BW2:393)
 - 28 April 1803: SecNav inquires about the possibility of buying the [*Nautilus*]() (BW2:394)
 - 5 May 1803: SecNav buys the [*Nautilus*]() (BW2:397)
+- Eventually two more ships built: Siren and Vixen
