--- a/Cruises.page
+++ b/Cruises.page
@@ -22,3 +22,4 @@ Commodore: Richard Valentine Morris
 
 ## Cruise 3
 - Resume of ships: BW3:11-12
+- BW2:414: [Edward Preble]() reports that the [USS *Constitution*]() needs to be heaved down and thus won't be ready for another 7 or 8 weeks, 22 May 1803
