--- a/Engagements with Tripoli.page
+++ b/Engagements with Tripoli.page
@@ -18,6 +18,9 @@
 ### 9 May 1803
 - Batteries in the French citadel of Tripoli, as well as gunboats, fired at [USS *John Adams*](); *John Adams* tacked out of range (BW2:400-401)
 
+### 22 May 1803
+- Tripolitan batteries fire on the [USS *John Adams*]() and the [USS *Enterprise*]() (BW2:416)
+
 ### 28 May 1803
 - "At 5 P M, May 28th 1803 the *New York*, (Commodore M) being 2 or 3 miles ahead of the Squadron, and a very light breeze, 9 Gun boats of the enemy, and a large Zebec, were discovered, in shore of us. The Commodore made a signal for the John Adam, to make sail - she had every thing then set that could be of any advantage, but one lower steering sail, which was instantly set. The wind still decreasing & not comeing up with the New York, the Commodore, hove too, with his Main Top sail aback, & made the signal for the John Adams, to lead the Van; she accordingly passed the New Ywk & commenced the action on the Gun boats, Zebec & Forts. The Commodore took a position, about 3 or 4 Cables length, on the weather bow of the John Adams, & fired 2 or 3 broad sides, after which no report was heard from his battery. The John Adams continued firing untill darkness prevented objects from being distinguished. The Forts & Gun boats kept a constant fire. The John Adams remained, on the scene of action all night. In the morning the Commodore, with the remainder of his Squadron were about 11 or 12 miles distance to the Northward & Westward" 
 - [Thomas Hooper](), marine, who wrote this report to [William Eaton](), clearly disapproved of the conduct of [Richard Valentine Morris]() during this skirmish (BW2:415)
