--- a/Blockade effectiveness.page
+++ b/Blockade effectiveness.page
@@ -29,3 +29,5 @@
     - Furthermore, his lack of supplies (supposed to have been brought by the [USS *Constellation*]()) has forced him to pull the entire squadron back to Gibraltar (30 March 1803)
 
 ## [Need for different ships]()
+
+## [Discontent about lack of effectiveness]()
