never be tarnished

--- a/Honor.page
+++ b/Honor.page
@@ -40,3 +40,8 @@
 The assigning of rank and seniority caused many problems in the Navy; a seniority ranking lower than expected could provoke some officers into sending in their resignation rather than accept the lower seniority.
 
 - [Isaac Hull]() did this at first; SecNav responded: "I know what the feelings of military Men are, and that among them there always exista a jealousy on the subject of rank: this jealousy is by no means an improper one, but it sometimes leads men into hasty & intemperate decisions, incompatible with their own honor." (3 May 1802, BW2:141)
+
+
+## Zeal for the task
+- BW2:423: [Edward Preble]() assures SecNav of his zeal for the leadership of the squadron (it's almost as if he knew [Richard Valentine Morris]() had been a disappointment): "I am fully aware of the great trust, and high responsibility connected with this appointment, and altho I may err in judgment from a want of talents and experience, for so important Station, yet he may rest assured that I never shall from a want of Zeal for the Public service. The honor of the American Flag is very dear to me, and I hope it will never be tarnished under my
+command" (27 May 1803) 
