--- a/Ships.page
+++ b/Ships.page
@@ -1,6 +1,7 @@
 # United States
 ## Navy
 - [USS *Adams*]()
+- [USS *Argus*]()
 - [USS *Boston*]()
 - [USS *Chesapeake*]()
 - [USS *Constellation*]()
