--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -44,7 +44,7 @@ One of the constant questions for the squadron was whether to get supplies from 
         - *Federal Eagle* has fifteen days starting 3 May 1803 to get to sea, and fifteen days to unload once she reaches Gibraltar (BW2:395)
 - Other charters (BW2:395-96):
     - 27 May 1803: *Monsoon* (BW2:425)--uncertain when this ship actually departed
-    - 1 June 1803: *Betsy Walk*
+    - 1 June 1803: *Betsy Walk*--also carried timber for Algiers
     - 17 October 1803: *Citizen*
     - 8 November 1803: *William and Mary*
     - 10 January 1804: *Woodrop Sims*
