negotiations by morris

--- a/Tripoli.page
+++ b/Tripoli.page
@@ -39,3 +39,7 @@ Negotiations with Tripoli sometimes occurred through the other Barbary governmen
 
 ## Problems with negotiations
 - BW2:204: [James Leander Cathcart]() sees the capture of the [*Franklin*]() as a huge setback in the prospect of negotiations: "we were upon the eve of concluding a treaty upon terms which would not only have been honorable to the United States as a Nation, but would have establish'd a precedent worthy the imitation of other nations, & have founded n basis on which to establish our peace with the rest of the Barbary States in future, to be thus lull'd into a false security which has in a great measure blasted our most sanguine hopes is distressing beyond parallel, to have our vessels captured while the squadrons of the U, S of America & of Sweden are lending their aid to protect our commerce implies something very unfavorable to our energy & undoubtedly will be construed much to our disadvantage by the heads of the Barbary States" (15 July 1802)
+
+## [Richard Valentine Morris]()
+- Authorized to negotiate on behalf of the United States
+- [Henry Wadsworth]() records how the negotiations are going: "The treaty is already drawn up, excepting one or two Articles. The White Flag is hoisted on both sides and hostilities suspended: Their Cruizers while the truce lasts are permitted to go into port should they arrive off here: but none to go out: The advantages are all on the side of the Enemy. therefore let the truce be short. A speedy peace or a still more speedy War" (7 June 1803, BW2:445)
