--- a/Perceptions of people in the Mediterranean.page
+++ b/Perceptions of people in the Mediterranean.page
@@ -3,6 +3,8 @@ Naval officers often gave clues about how they perceived their enemies and even 
 # Barbary 
 ## Cowardly
 - [John R. Fenwick](), 3 February 1802: "none of our Vessels as yet have been taken, & whilst the Dread of the Americans exists, the pusillanimity of these people will prevent them leaving their Ports" (BW2:47)
+- [Henry Wadsworth]() implies that the people of Tripoli are cowardly in their response to the [USS *John Adams*]() firing a broadside into the town: "These shot went thro' the Bashaw's Palace, his favorite wife fainted all was confusion in the
+City -running to & fro: The next day, when the J. Adams stood in for the City again - it cost the Bey several hundreds of dollars to hiremen to man the guns his own soldiers refusing" (7 June 1803, BW2:446)
 
 ## Polite
 - [William Bainbridge]() comments that the governor of Tangier received them "with civility & a degree of Moorish politeness" (BW2:65, 25 February 1802)
