--- a/Tripoli.page
+++ b/Tripoli.page
@@ -43,3 +43,4 @@ Negotiations with Tripoli sometimes occurred through the other Barbary governmen
 ## [Richard Valentine Morris]()
 - Authorized to negotiate on behalf of the United States
 - [Henry Wadsworth]() records how the negotiations are going: "The treaty is already drawn up, excepting one or two Articles. The White Flag is hoisted on both sides and hostilities suspended: Their Cruizers while the truce lasts are permitted to go into port should they arrive off here: but none to go out: The advantages are all on the side of the Enemy. therefore let the truce be short. A speedy peace or a still more speedy War" (7 June 1803, BW2:445)
+- [Nicholas Nissen]() reports that by 9 June, the negotiations are over and no peace is concluded (BW2:447)
