instruments in bad shape

--- a/Science.page
+++ b/Science.page
@@ -42,3 +42,7 @@
 - [Death by violence]()
 
 # [Other medical events]() 
+
+# Medical supplies
+- Each ship was issued a chest of medical tools and instruments, as well as a certain amount of medicine and spirits
+- It is apparently difficult to keep the instruments in usable shape: they must be removed from the vessels when the ships aren't at sea: "When vessels arrive in any Port in the United States their medicine chests and instruments are in pursuance of the arrangement I have made, to be taken out and sent to this place where all the medicines that are good are taken out and carefully preserved & the instruments are kept in order, so as to be read for immediate use - By suffering the Chests to remain in the Vessels - We have heretofore lost all the medicines that remained on her arrival in port - the instruments have become rusty & in many instances entirely unfit for future use" (SecNav, 13 June 1803, BW2:451) 
