--- a/Front Page.page
+++ b/Front Page.page
@@ -27,6 +27,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Gender]()
 - [Honor]()
 - [International law]()
+- [Labor]()
 - [Negotiation strategies]()
 - [Perceptions of people in the Mediterranean]()
 - [Physical accidents to ships or persons]()
