--- a/Strategy.page
+++ b/Strategy.page
@@ -28,6 +28,10 @@ By the end of the first cruise, Dale had a different perspective: "It is very pl
 - Important to note that for the first year of the blockade, it was a joint operation with Sweden, who was doing the heavy lifting
     - [Alexander Murray]() notes the three Swedish frigates off Tripoli at a time when there are no(?) American ships, BW2:163, 1 June 1802
     - 18 September 1802: As Murray is leaving the blockade, he communicates with the Swedish admiral, who plans to stay on station until 15 October and then leave until May; in the interim, providing [Convoy]() service to American and Swedish vessels (BW2:278)
+- [Richard Valentine Morris]() is censured by the navy for not maintaining the blockade; he argues that he chose to interpret his orders (which were given with considerable latitude) as being first and foremost about the *ends* of protection of American commerce, and less about the *means* of doing so (the blockade)
+    - "Did the secretary [of the navy] mean that the Commodore should persist in the project of a blockade, though it should become evident to demonstration, that the property of our merchants would be thereby sacrificed, and our seamen be led into captivity?" (RVM18)
+
+
 
 ### [Blockade effectiveness]()
 
