merchant vessels to supply ships

--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -67,3 +67,4 @@ One of the constant questions for the squadron was whether to get supplies from 
 - BW2:238: [USS *Constellation*]() gets supplies at Malta: fresh provisions, Spirits, Vinegar, Flour, Cheese, Bread, Coals, Wood, &c., 17 August 1802
 - BW2:382: [USS *Chesapeake*]() calls at Syracuse thinking it might be cheaper than Malta to buy supplies there--[Richard Valentine Morris]() reports that "On the contrary, every article was much more exorbitant, and in fact, impossible to procure" (around 26 December 1802)
 - BW2:457: [John Rodgers]() ordered not to return to Gibraltar for supplies, but rather to "freight some Merchant Vessel to bring to you such supply" (21 June 1803)
+- BW2:458: SecNav writes to [John Gavino]() about the possibility of sending merchant vessels to Malta or the squadron at regular intervals so that the squadron doesn't have to return to Gibraltar to re-supply (21 June 1803)
