dashed to Attoms

--- a/Engagements with Tripoli.page
+++ b/Engagements with Tripoli.page
@@ -35,6 +35,7 @@
 - [John Rodgers]() writes that he suspected the bashaw was intending to send out cruisers in the night, so he spread out the [USS *Adams*](), [USS *Enterprise*](), [USS *New York*](), and [USS *John Adams*]() to intercept anything that came out
 - *Enterprise* spotted a ship anchored close to the beach, as well as 9 gunboats coming to her defense
 - An American ship fired on the vessel, and it eventually blew up, but the gunboars got away (BW2:459-60)
+- Rodgers describes the explosion: "The destruction of the before mentioned vessel, altho' awful, was one of the Grandest Spectacles I ever beheld. - After a Tremendous Explosion there appeared a Huge Column of smoke, with a Pyramid of Fire darting Vertically through its Centre interspersed with Masts, Yards, Sails Rigging, different parts of the Hull &c and the vessel in an instant dashed to Attoms" (BW2:466)
 
 ## Reports of cruisers
 - 17 May 1802: [Alexander Murray]() notes that there were no Tripolitan cruisers out as of 31 April (BW2:155)
