favor Tripoli from Morocco

--- a/Relationships among North Africa.page
+++ b/Relationships among North Africa.page
@@ -3,3 +3,6 @@ The Barbary States were technically regencies of the Ottoman Empire, though they
 - [Richard O'Brien]() reports that the Turkish government gifted Algiers with recruits and naval stores. He suggests two possible motives for this move:
     1. "to strengthen the hands of this State, the principal political Redoubt of the Ottoman Empire" or
     2. "to lull this Regency into security to plunder them" (BW1:617)
+
+The Barbary States were often seen as being in collusion with each other, even if they weren't.
+- [James Simpson]() notes about Morocco: "We have seen the Emperour since the commencement of the War with Tripoly, do what he could to favour them, all Nations experience the like conduct from every State in Barbary, when they have War with my of the others" (BW2:470, 9 July 1803)
