--- a/Communications.page
+++ b/Communications.page
@@ -18,6 +18,7 @@
 - BW2:287: [Hugh G. Campbell](), knowing that he will not hear from Commodore [Richard Valentine Morris]() for several weeks, makes the decision to allow [James Simpson]() to issue a passport for the [*Meshouda*]() (1 October 1802)
     - He writes: "So tedious is Communication about these Seas, that I have now two Letters for him from Captn Murry, dated Malta 20th Augt shall be under the Necessity of returning them to Malta by the first Ship of War that goes."
 - BW2:310: [Alexander Murray]() thinks communications are so poor between him and [Richard Valentine Morris]() (Murray around Malaga and Morris off Tripoli), that he writes to the Secretary of the Navy instead of to Morris, 7 November 1802
+- *Orders and strategies were handed off between commodores, not necessarily being vetted through Washington first*--BW2:474: "You will see the Commanding Officer of the squadron at present in the Mediterranean and communicate with him on the subject of his past and intended operations. From such communication you may derive useful information and may thereby be enabled to make a more skilful and advantageous disposition of the force under your direction" (SecNav to [Edward Preble](), 13 July 1803)
 
 ## Communications with Barbary rulers
 - Important to remember that communications often went through at least one, maybe two translators between Barbary ruler and American commodore or diplomat
