--- a/Cruises.page
+++ b/Cruises.page
@@ -24,3 +24,10 @@ Commodore: Richard Valentine Morris
 - Resume of ships: BW3:11-12
 - BW2:414: [Edward Preble]() reports that the [USS *Constitution*]() needs to be heaved down and thus won't be ready for another 7 or 8 weeks, 22 May 1803
 - BW2:420: [USS *Philadelphia*]() delayed in getting to sea for want of spars (24 May 1803)
+- Squadron: Commodore [Edward Preble]() in [USS *Constitution*]()
+    - [USS *Philadelphia*](): [William Bainbridge]()
+    - [USS *Siren*](): [Charles Stewart]()
+    - [USS *Argus*](): [Isaac Hull]()
+    - [USS *Vixen*](): [John Smith]()
+    - [USS *Nautilus*](): [Richard Somers]()
+    - [USS *Enterprise*](): [Stephen Decatur]()
