orders for cruise 3

--- a/Cruises.page
+++ b/Cruises.page
@@ -31,3 +31,7 @@ Commodore: Richard Valentine Morris
     - [USS *Vixen*](): [John Smith]()
     - [USS *Nautilus*](): [Richard Somers]()
     - [USS *Enterprise*](): [Stephen Decatur]()
+- Orders (BW2:474-75):
+    - "subdue, seize, and make prize of, all Vessels, Goods and Effects belonging to the Bey of Tripoli or to his subjects"
+    - "The varying aspects of our affairs in the Mediterranean - the great distance between this country and the probable places of your operations, render it improper for the government to prescribe to you any particular course of conduct. We therefore leave you unrestrained in your movements and at liberty to pursue the dictates of your own judgment subject however to the following general regulations and instructions."
+    - "you will without intermission maintain during the season in which it may be safely done, an effectual blockade of Tripoli, & that you will by all the means in your power annoy the Enemy and it is submitted to you whether during such blockade it would not be advisable to keep some of your squadron cruising off Cape Bonn. It is however proper to state to you that no place is to be considered by you in a state of blockade which is not actually besieged." <-- key piece of information here; this matters for the legality of captures
