--- a/Front Page.page
+++ b/Front Page.page
@@ -33,6 +33,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Physical accidents to ships or persons]()
 - [Pre-war relations with European nations]()
 - [Naval officers’ relations with their own diplomats]()
+- [Race]()
 - [Relationships among North Africa]()
 - [Relations with government at home]()
 - [Relations with merchants and civilians]()
